log
Thu 09 Mar 2023 04:08:04 PM UTC: 
 tests:  0|7
total_score: 0/70
ef9b54b
Thu 09 Mar 2023 04:14:31 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:16:13: error: initialization of ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   16 |   int aux = a;
      |             ^
exercises.c:17:6: error: expected expression before ‘=’ token
   17 |   a* = *b;
      |      ^
exercises.c:18:6: error: expected expression before ‘=’ token
   18 |   b* = aux;
      |      ^
cc1: all warnings being treated as errors
Compilation failed
5790894
Thu 09 Mar 2023 04:14:41 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:17:6: error: expected expression before ‘=’ token
   17 |   a* = *b;
      |      ^
exercises.c:18:6: error: expected expression before ‘=’ token
   18 |   b* = aux;
      |      ^
Compilation failed
806012c
Thu 09 Mar 2023 04:15:02 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
bf75c24
Thu 09 Mar 2023 04:23:33 PM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:31:5: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   31 |     if (*min > *a);
      |     ^~
exercises.c:32:7: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   32 |       *min = *a;
      |       ^
exercises.c:33:5: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   33 |     if (*max < *a);
      |     ^~
exercises.c:34:7: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   34 |       *max = *a;
      |       ^
cc1: all warnings being treated as errors
Compilation failed
da0e07f
Thu 09 Mar 2023 04:23:50 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
46116a7
Thu 09 Mar 2023 04:27:06 PM UTC: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:31:16: error: invalid type argument of unary ‘*’ (have ‘int’)
   31 |     if (*min > *a[k])
      |                ^~~~~
exercises.c:32:14: error: invalid type argument of unary ‘*’ (have ‘int’)
   32 |       *min = *a[k];
      |              ^~~~~
exercises.c:33:16: error: invalid type argument of unary ‘*’ (have ‘int’)
   33 |     if (*max < *a[k])
      |                ^~~~~
exercises.c:34:14: error: invalid type argument of unary ‘*’ (have ‘int’)
   34 |       *max = *a[k];
      |              ^~~~~
Compilation failed
c38ed6a
Thu 09 Mar 2023 04:27:43 PM UTC: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  1|6
total_score: 10/70
5202611
Thu 09 Mar 2023 09:33:53 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
97ade76
Thu 09 Mar 2023 09:34:07 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
4becf7a
Thu 09 Mar 2023 09:34:35 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
d359168
Thu 09 Mar 2023 09:35:27 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:36:10: error: passing argument 1 of ‘printf’ makes pointer from integer without a cast [-Werror=int-conversion]
   36 |   printf(*max);
      |          ^~~~
      |          |
      |          int
In file included from /nix/store/iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev/include/stdio.h:866,
                 from test.c:1:
/nix/store/iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev/include/bits/stdio2.h:110:32: note: expected ‘const char * restrict’ but argument is of type ‘int’
  110 | printf (const char *__restrict __fmt, ...)
      |         ~~~~~~~~~~~~~~~~~~~~~~~^~~~~
In file included from test.c:5:
exercises.c:36:3: error: format not a string literal and no format arguments [-Werror=format-security]
   36 |   printf(*max);
      |   ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
80a51b3
Thu 09 Mar 2023 09:35:53 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|6
total_score: 10/70
6772624
Thu 09 Mar 2023 09:36:12 PM UTC: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:31:17: error: invalid type argument of unary ‘*’ (have ‘int’)
   31 |     if (*min >= *a[k])
      |                 ^~~~~
exercises.c:32:14: error: invalid type argument of unary ‘*’ (have ‘int’)
   32 |       *min = *a[k];
      |              ^~~~~
exercises.c:33:17: error: invalid type argument of unary ‘*’ (have ‘int’)
   33 |     if (*max <= *a[k])
      |                 ^~~~~
exercises.c:34:14: error: invalid type argument of unary ‘*’ (have ‘int’)
   34 |       *max = *a[k];
      |              ^~~~~
Compilation failed
24e4124
Thu 09 Mar 2023 09:36:23 PM UTC: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  1|6
total_score: 10/70
3ffaf4d
Thu 09 Mar 2023 09:38:08 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
7353f41
Sat 11 Mar 2023 11:46:02 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
e8716cb
Sat 11 Mar 2023 11:53:53 PM UTC: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  3|4
total_score: 30/70
9def345
Sun 12 Mar 2023 12:01:28 AM UTC: 
 exercises.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:80:32: error: ‘null’ undeclared (first use in this function)
   80 |   if (auxiliar == NULL) return null;
      |                                ^~~~
exercises.c:80:32: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
c6f70b3
Sun 12 Mar 2023 12:01:39 AM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:81:12: error: ‘null’ undeclared (first use in this function)
   81 |     return null;
      |            ^~~~
exercises.c:81:12: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
0821e41
Sun 12 Mar 2023 12:01:51 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
8bd7ab9
Thu 16 Mar 2023 03:31:58 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘asignarValor’:
exercises.c:100:6: error: ‘Vector’ has no member named ‘dato’; did you mean ‘datos’?
  100 |   v->dato[i] = valor;
      |      ^~~~
      |      datos
Compilation failed
5b14468
